# libstroke

./: AUTHORS  COPYING  COPYRIGHT  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.libgstroke  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libgstroke.m4  libstroke.m4  ltmain.sh
doc/: Makefile.in  standard_strokes.txt
javastroke/: Makefile.in  Makefile.unix  Paint.java  README  Stroke.java
libgstroke/: ChangeLog  Makefile.am  Makefile.in  README  TODO  gnome-stroke-draw.c  gstroke.h
libstroke/: Makefile.am  Makefile.in  stroke.c  stroke.h
tests/: Makefile.am  Makefile.in  gnome_stroke_test.c  stroke_test.c  stroke_test.tcl
